# mentat-backend

./: Dockerfile  README.md  deploy.sh  fly.toml  prototype.ipynb  pyproject.toml
app/: main.py  models.py  routes.py  services.py  settings.py  starter.py  test.py  utils.py
tests/: endpoints.py
