[tool.poetry]
name = "fastapi-neon"
version = "0.1.0"
description = ""
authors = ["adiwakchoure <aditya.wakchoure@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.28.0"}
pydantic = "^2.6.4"
trafilatura = "^1.7.0"
marvin = "^2.2.2"
tavily-python = "^0.3.1"
brave-search = "^0.1.8"
sqlmodel = "^0.0.16"
psycopg = {extras = ["binary"], version = "^3.1.18"}
ulid-py = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
